2003-02-17  Vince Darley <vincentdarley@sourceforge.net>

	* library/vfsUtils.tcl: added beginnings of interface for
	filesystem configuration.
	
2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/vfslib.tcl: fixed bug in new vfs::zstream code,
	preventing forward seeking from working properly
	* library/starkit.tcl: recognize if launched as NT service

2003-02-08  Vince Darley <vincentdarley@sourceforge.net>

	* library/*.tcl: made all 'matchindirectory' implementations
	robust to whether they are passed a directory with a trailing
	file-separator or not.  (Tcl doesn't document whether there
	will be one, and optimisations to Tcl's filesystem require
	this flexibility.  Also the use of 'file join' will actually
	make the entire filesystem *more* efficient soon).
	
2003-02-06  Andreas Kupries  <andreask@activestate.com>

	* tclconfig/tcl.m4: Added SC_TCL_EARLY_FLAGS and
	* configure.in:     SC_TCL64BIT_FLAGS, copied from the Tcl
	* configure:        configuration. Usage prevents mismatch
	                    between tcl core and tclvfs with regard
			    to the selected types for wide integer
			    and Tcl_StatBuf. Regenerated configure.

2003-02-04  Vince Darley <vincentdarley@sourceforge.net>

	* doc/vfs.n: 
	* doc/vfslib.n: update docs to reflect last six months
	of changes.
	
2003-02-04  Andreas Kupries  <andreask@activestate.com>

	* library/mk4vfs.tcl: Fixed bad vfs::mk4::Mount change.

2003-02-04  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: fixed version of VfsFullyNormalizePath,
	should resolve some problems with symlinks. Tcl really needs
	a 'file normalized -full' and equivalent C api.
	
2003-02-04  Vince Darley <vincentdarley@sourceforge.net>

	* tests/*.test: cleanup
	
	Also updated version of the package to 1.2 (not 1.1 since there's
	a Windows binary floating around with that number, and we want to
	avoid confusion).  It's been fixed at 1.0 for far too long.
	
2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>
