@@ -1,6 +1,6 @@
 # vfsUtils.tcl --
 #
-# $Id: vfsUtils.tcl,v 1.19 2003/02/17 11:55:21 vincentdarley Exp $
+# $Id: vfsUtils.tcl,v 1.20 2003/02/17 12:02:37 vincentdarley Exp $
 
 package require Tcl 8.4
 package require vfs
@@ -94,12 +94,14 @@ proc ::vfs::attributes {mountpoint args} {
 	return -code error "filesystem not known or not configurable"
     }
     
-    while {1} {
-	foreach {attr val} $args {
-	    set args [lrange $args 2 end]
-	    break
-	}
+    while {[llength $args] > 1} {
+	set attr [string range [lindex $args 0] 1 end]
+	set val [lindex $args 1]
+	set args [lrange $args 2 end]
 	if {[info commands ::vfs::${ns}::$attr] != ""} {
+	    if {![llength [info args ::vfs::${ns}::$attr]]} {
+		return -code error "filesystem attribute \"$attr\" is read-only"
+	    }
 	    if {[catch {::vfs::${ns}::$attr $val} err]} {
 		return -code error "error setting filesystem attribute\
 		  \"$attr\": $err"
